fixed 3 issues - dark mode, sidebar flex and set icons color

--- a/static/style.css
+++ b/static/style.css
@@ -553,28 +553,3 @@ video {
   --tw-contain-paint:  ;
   --tw-contain-style:  ;
 }
-
-.static {
-  position: static;
-}
-
-.block {
-  display: block;
-}
-
-.flex {
-  display: flex;
-}
-
-.items-center {
-  align-items: center;
-}
-
-.justify-between {
-  justify-content: space-between;
-}
-
-.bg-slate-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
-}
